--- a/install
+++ b/install
@@ -47,3 +47,12 @@ fi
 
 ln -s ~/.dotfiles/bash/bash_profile ~/.bash_profile
 ln -s ~/.dotfiles/bash/bashrc ~/.bashrc
+ln -s ~/.dotfiles/bash/bash-it ~/.bash_it
+
+printf "\n"
+echo "#######################################"
+echo "#  Now configure bash_it              #"
+echo "#######################################\n"
+printf "\n"
+
+~/.bash_it/install.sh
