--- a/install
+++ b/install
@@ -43,7 +43,14 @@ if [ -f ~/.vimrc ]; then
     mv ~/.vimrc ~/.vimrc_backup
 fi
 
-ln -s ~/.dotfiles/vim/vimrc ~/.vimrc
+if [ -f ~/.gvimrc ]; then
+    echo "Found existing .gvimrc file in your HOME directory."
+    echo "Move it to ~/.gvimrc_backup."
+    mv ~/.gvimrc ~/.gvimrc_backup
+fi
+
+ln -s ~/.dotfiles/vim/vimrc.vim ~/.vimrc
+ln -s ~/.dotfiles/vim/gvimrc.vim ~/.gvimrc
 ln -s ~/.dotfiles/vim/vim/ ~/.vim
 
 echo "Success"
