Add vim plugins.

--- a/install
+++ b/install
@@ -53,7 +53,12 @@ ln -s ~/.dotfiles/vim/vimrc.vim ~/.vimrc
 ln -s ~/.dotfiles/vim/gvimrc.vim ~/.gvimrc
 ln -s ~/.dotfiles/vim/vim/ ~/.vim
 
-echo "Success"
+echo "Install YouCompleteMe."
+#Here I create a new shell instance.
+(cd ~/.dotfiles/vim/vim/bundle/YouCompleteMe && git submodule update --init --recursive)
+~/.dotfiles/vim/vim/bundle/YouCompleteMe/install.sh --clang-completer
+
+echo "Success install vim configurations."
 
 #Install bash configurations.
 printf "\n"
