Now Chuck Norris is protecting my dotfiles. :trollface:

--- a/install
+++ b/install
@@ -140,7 +140,7 @@ ln -s ~/.dotfiles/bin ~/bin
 
 echo "#######################################"
 echo "# Custom tools installed.             #"
-echo "# Real man has his own tools .        #"
+echo "# Real man has his own tools.        #"
 echo "#                -- By winiex         #"
 echo "#######################################"
 
@@ -152,7 +152,44 @@ echo "#                -- By winiex         #"
 echo "#######################################"
 printf "\n"
 
-printf "\n"
+echo "                       ▗▄▄▄▄▄▄▄▟▄▄▄▄▄▄"
+echo "                     ▐██████████████████▙▄▄"
+echo "                     ███████████████████████▄"
+echo "                    ▐████████████████████████▌"
+echo "                    ██████████████████████████"
+echo "                   ▐██████████████████████████▌"
+echo "                   ███████████████████████████▌"
+echo "                  ▗███████████████████████████▀"
+echo "                  ▟███████████████████████████████████▄▄▖"
+echo "                 ▐████████████████████████████████████████▄"
+echo "    ▄            ▟██████████████████████████████████████████▖"
+echo "    ▝▙▄▄        ▄▟▄▄▟███████████▀▀▀▀▀▀▀▀▀▜███████████████████"
+echo "      ▀███████████████▖▀▛▘▀▀▀▐███         ▝▙▄▟███████████████"
+echo "        ▝▀▜███████████▙     ▀███▛▀        ▗▛████████████████▛"
+echo "           ▝▀▜████ ▟█▜▜▄    ██▀▀▀▀▚       ▐███████▙▄▝▀██████"
+echo "               ▝▀█▖▘    ▘▛   ▝            ▐█▀▜██████▌  ▝███▘"
+echo "                  ▘                        ▌   ▝██████▄▄▞▀"
+echo "                       ▌▝▀                 ▘▌▝ ▟███████▛▀"
+echo "                   ▘   ▗     ▄▘▘▖          ▝  ▗███▀▜███▛▘"
+echo "                      ▗▄▟██████▄▟▄         ▖ ▄████▙"
+echo "                   ▗▗███████▀▀▀▀▘▝▌        ▝▜████▖▀▚▖"
+echo "                   ▝███▙▖▄▄▄▖  ▝▘▄█         ▐███▀▀▘"
+echo "                    ▜██▖          █         ▟███▖"
+echo "                     ▜██████▄▄▄▄▄▖▀         ▟█▛▜▙"
+echo "                      ▜████████▙           ▗███▙▄"
+echo "                       ▜█████▖▄    ▄▀▄  ▗▄▟███████▖"
+echo "                   ▗▟█▘█▄▛▜▜██▙███▙▟███████████████▙"
+echo "                 ▗███▛ ▜███▙▄▄ ▐████████████████████▙▄▄▄"
+echo "  ▗▄▄▄▄▄▄▄███▛▀▗▄████▌▗▙█████████████████████████████████▄"
+echo "  ▐█▀  ▄▄██▛▀▗▟██████▙████████████████████████████████████▙▖"
+echo "   ▐ ▐██▌     ██████████████████████████████████████████████"
+echo "   ▝ ▝▀▀▘     ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀"
+echo "                These dotfiles is protected by:"
+echo "   ________               __      _   __                _"
+echo "  / ____/ /_  __  _______/ /__   / | / /___  __________(_)____"
+echo " / /   / __ \/ / / / ___/ //_/  /  |/ / __ \/ ___/ ___/ / ___/"
+echo "/ /___/ / / / /_/ / /__/ ,<    / /|  / /_/ / /  / /  / (__  )"
+echo "\____/_/ /_/\__,_/\___/_/|_|  /_/ |_/\____/_/  /_/  /_/____/"
 echo " _____        _                           __        "
 echo " |  ___|      (_)                  _       \ \      "
 echo " | |__  _ __   _   ___   _   _    (_)______ | |     "
@@ -169,4 +206,7 @@ echo "| |_/ /| |_| |    \  /\  /| || | | || ||  __/ >  <  "
 echo "\____/  \__, |     \/  \/ |_||_| |_||_| \___|/_/\_\ "
 echo "         __/ |                                      "
 echo "        |___/                                       "
+printf "\n"
+
 echo "Contact Me: winiex.nie#gmail.com"
+printf "\n"
