--- a/install
+++ b/install
@@ -91,8 +91,8 @@ if [ -f ~/.bashrc ]; then
     mv ~/.bashrc ~/.bashrc_backup
 fi
 
-ln -s ~/.dotfiles/bash/bash_profile ~/.bash_profile
-ln -s ~/.dotfiles/bash/bashrc ~/.bashrc
+ln -s ~/.dotfiles/bash/bash_profile.sh ~/.bash_profile
+ln -s ~/.dotfiles/bash/bashrc.sh ~/.bashrc
 ln -s ~/.dotfiles/bash/bash-it ~/.bash_it
 
 echo "#######################################"
